[TASK] lower z-index on some 'whole-area-link' to prevent following link when editing text

--- a/felayout_t3kit/dev/styles/main/contentElements/leftIconTextButton.less
+++ b/felayout_t3kit/dev/styles/main/contentElements/leftIconTextButton.less
@@ -75,6 +75,10 @@
     z-index: 2;
 }
 
+.frontend_editing .icon-text-btn._whole-area-link .icon-text-btn__link {
+    z-index: -1;
+}
+
 .icon-text-btn._whole-area-link:hover .icon-text-btn__link {
     background-color: fade(#fff, 10%);
 }
